--- a/CSS/desktop.css
+++ b/CSS/desktop.css
@@ -1,7 +1,7 @@
 /* Body style should always be first style block, for javascript dunctionality */
 body
 {
-    background-image: url("../Assets/Black-Flowers-Compressed.webp");
+    background-image: url("../Assets/White-Bricks.webp");
 
     animation: bg-move 10s linear infinite;
 }
