--- a/CSS/index.css
+++ b/CSS/index.css
@@ -3,6 +3,8 @@ body
     background-color: black;
     color: #FFFFAF;
 
+    font-family: 'Courier New', Courier, monospace;
+
     display: flex;
     flex-direction: column;
     align-items: center;
