--- a/CSS/desktop.css
+++ b/CSS/desktop.css
@@ -28,12 +28,23 @@ button
     position: absolute;
 
     align-content: center;
+
+    animation: shake 0.5s linear infinite;
 }
 
-.icon
+@keyframes shake
 {
-    margin-top: 2px;
-    margin-bottom: 8px;
+    0% {transform: translate(0px, 0px);}
+
+    20% {transform: translate(4px, -4px);}
+
+    40% {transform: translate(-4px, 4px);}
+
+    60% {transform: translate(-4px, -4px);}
+
+    80% {transform: translate(4px, 4px);}
+
+    100% {transform: translate(0px, 0px);}
 }
 
 button:hover
@@ -47,5 +58,10 @@ button:active
     background-color: slateblue;
 }
 
+.icon
+{
+    margin-top: 2px;
+    margin-bottom: 8px;
+}
 /* Keyframes declared but not initialised. Actual keyframes are initialised by desktop.js */
 @keyframes bg-move {}
