mouse icon now shows grabbing when dragging an app

--- a/CSS/desktop.css
+++ b/CSS/desktop.css
@@ -47,12 +47,13 @@ button
 button:hover
 {
     background-color: darkslateblue;
-    cursor: pointer;
+    cursor: grab;
 }
 
 button:active
 {
     background-color: slateblue;
+    cursor: grabbing;
 }
 
 .icon
