--- a/CSS/about.css
+++ b/CSS/about.css
@@ -4,16 +4,31 @@ body
 
     font-family: 'Courier New', Courier, monospace;
     color: yellow;
-    -webkit-text-stroke: 1px black;
 }
 
 #header
 {
     display: flex;
     justify-content: space-between;
+
     border-bottom: 2px solid;
 
     user-select: none;
+
+    -webkit-text-stroke: 1px black;
+}
+
+#main-text
+{
+    display: flex;
+    justify-content: space-between;
+}
+
+p
+{
+    width: 45%;
+    overflow-wrap: break-word;
+    font-size: 1.5em;
 }
 
 h1:hover
