finally actually wrote the about page

--- a/CSS/about.css
+++ b/CSS/about.css
@@ -86,7 +86,10 @@ img
     opacity: 0.33;
 
     position: absolute;
+    top: 40%;
     left: 36%;
+    z-index: -1;
+
     animation: wander 5s ease-in-out infinite
 }
 
