--- a/CSS/blog.css
+++ b/CSS/blog.css
@@ -3,4 +3,54 @@ body
     background-color: powderblue;
 
     font-family: 'Comic Sans MS';
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    overflow-x: hidden;
+}
+
+h1
+{
+    border-bottom: 4px solid;
+    width: 150%;
+    
+    position: sticky;
+    top: 0px;
+
+    background-color: powderblue;
+}
+
+.page
+{
+    background-color: aliceblue;
+    border-style: groove;
+    border-width: 0.5em;
+
+    width: 80%;
+
+    padding: 1em;
+    font-size: 1.5em;
+}
+
+i
+{
+    width: 100%;
+    display: flex;
+    justify-content: right;
+}
+
+b
+{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+p
+{
+    margin-top: 1.5em;
+
+    text-indent: 2em;
 }
