--- a/CSS/blog.css
+++ b/CSS/blog.css
@@ -2,6 +2,7 @@ body
 {
     background-color: powderblue;
     background-image: url("../Assets/blog-bg.webp");
+    background-attachment: fixed;
 
     font-family: 'Comic Sans MS';
 
@@ -55,6 +56,8 @@ h1
 
     margin-top: 2em;
     margin-bottom: 2em;
+
+    box-shadow: 15px 10px 10px darkslategray;
 }
 
 i
